fix user overflow, add ellipsis, fix hidden user bug, style changes

--- a/src/App.css
+++ b/src/App.css
@@ -85,16 +85,20 @@ textarea {
   background-color: inherit;
 }
 
-.users {
+.online {
   border: 1px solid #fa0;
   border-radius: 1px;
-  overflow: scroll;
-
+  overflow: hidden;
   box-sizing: border-box;
   height: 85vh;
+  width: 15vw;
 }
 
-.settings {
+.online:last-child {
+  padding-bottom: 3.15rem; /* */
+}
+
+.profile {
   border: 1px solid #fa0;
   border-radius: 1px;
 
@@ -104,10 +108,10 @@ textarea {
 
 @media screen and (max-width: 1000px) {
   /* hide users and settings*/
-  .users {
+  .online {
     display: none;
   }
-  .settings {
+  .profile {
     display: none;
   }
   /* set messages and input to full width */
@@ -172,3 +176,27 @@ textarea {
   word-wrap: break-word;
   white-space: pre-wrap;
 }
+
+.online-counter {
+  text-align: center;
+}
+
+.user {
+  padding: 0.6rem 0 0.6rem 1rem;
+  border-top: 1px solid rgba(223, 220, 220, 0.185);
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.user:hover {
+  background-color: #2e2c38;
+}
+
+.users {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+
+  
